[package]
name = "rua"
version = "0.2.1"
edition = "2021"

[workspace]
members = [
    ".",
    "src/std/stddecl",
    "src/std/base",
    "src/std/string",
    "src/std/table",
]

[lib]
name = "rua"
path = "src/lib.rs"

[[bin]]
name = "ruac"
path = "src/bin/ruac.rs"

[[bin]]
name = "rua"
path = "src/bin/rua.rs"
